# soulwalker-emacs

./: .gitignore  .gitmodules  README.md  build-from-source.sh  custom.el  early-init.el  ielm-history.eld  init.el  install-emacs-plus.sh  projects  pyproject.toml  update_submodule.py
eaf/browser/: password.db  zoom_data.db
elisp/: init-ace-window.el  init-apheleia.el  init-auto-save.el  init-avy.el  init-awesome-tray.el  init-basic.el  init-blink-search.el  init-buffer-move.el  init-cc.el  init-consult.el  init-dashboard.el  init-default-text-scale.el  init-dirvish.el  init-fingertip.el  init-go.el  init-key.el  init-lsp-bridge.el  init-lua.el  init-magit.el  init-marginalia.el  init-markdown.el  init-markmacro.el  init-mode.el  init-move-text.el  init-nix.el  init-ns-auto-titlebar.el  init-one-key.el  init-open-newline.el  init-orderless.el  init-org.el  init-popper.el  init-prescient.el  init-prog-mode.el  init-projectile.el  init-python.el  init-qml.el  init-quick-indent.el  init-rainbow-delimiters.el  init-rust.el  init-smartparens.el  (+14 more)
eln-cache/29.3-2bfb2c26/: advice-791b3e89-c97f6398.eln  ansi-color-75eac800-77130f12.eln  ansi-osc-b447f6a8-a7225f73.eln  array-b56b5eac-a896afb7.eln  auth-source-49df7eef-60daa0bc.eln  battery-ff1f50e8-26edadc0.eln  cc-align-bb265728-7a9b512c.eln  (+120 more)
lisp/: flycheck_setup-all.el  setup-all.el
test/: init-basic.el  test.el  test.sh
transient/: history.el
tree-sitter/: libtree-sitter-bash.dylib  libtree-sitter-c.dylib  libtree-sitter-cmake.dylib  libtree-sitter-cpp.dylib  libtree-sitter-markdown.dylib  libtree-sitter-python.dylib
(+264 files in other folders)
